[package]
name = "gsbservice"
version = "0.1.0"
authors = ["Colin O'Brien <cobrien@rapid7.com>"]

[dependencies]
# diesel = "0.9.0"
# diesel_codegen = { version = "0.9.0", features = ["postgres"] }
# dotenv = "0.8.0"
error-chain = "*"
hyper-rustls = "*"
hyper = "*"
# rocksdb = "0.6.0"
serde = "0.8.*"
serde_derive = "0.8"
serde_json = "0.8.*"
