[package]
name = "gsbservice"
version = "0.1.0"
authors = ["Colin O'Brien <cobrien@rapid7.com>"]

[dependencies]
# diesel = "0.9.0"
# diesel_codegen = { version = "0.9.0", features = ["postgres"] }
# dotenv = "0.8.0"
rust-crypto = "0.2.*"
regex = "0.2.*"
base64 = "0.2.*"
error-chain = "*"
hyper-rustls = "*"
hyper = "0.9.*"
lazy_static = "0.2.*"
log = "0.3"
lru-cache = "0.1.*"
env_logger = "0.3"
# rocksdb = "0.6.0"
serde = "0.8.*"
serde_derive = "0.8"
serde_json = "0.8.*"
maplit = "*"
url = "*"
idna = "0.1.*"
stopwatch = "*"
